[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/logo.png" type="Texture" id=1]
[ext_resource path="res://scenes/Buttons/QuitButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Buttons/SettingsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Buttons/SelectLevelButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 1152.0
margin_bottom = 640.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1024.0
margin_bottom = 176.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="MenuOptions" type="VBoxContainer" parent="Menu"]
margin_top = 180.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="SelectLevelButton" parent="Menu/MenuOptions" instance=ExtResource( 4 )]
margin_bottom = 60.0

[node name="SettingsButton" parent="Menu/MenuOptions" instance=ExtResource( 3 )]
margin_top = 80.0
margin_bottom = 140.0

[node name="QuitButton" parent="Menu/MenuOptions" instance=ExtResource( 2 )]
margin_top = 160.0
margin_bottom = 220.0

[connection signal="pressed" from="Menu/MenuOptions/SelectLevelButton" to="Menu" method="_on_SelectLevelButton_pressed"]
[connection signal="pressed" from="Menu/MenuOptions/SettingsButton" to="Menu" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Menu/MenuOptions/QuitButton" to="Menu" method="_on_QuitButton_pressed"]
